added nav bar and responsive

--- a/index.html
+++ b/index.html
@@ -6,10 +6,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-Two</title>
     <link rel="stylesheet" href="./style.css">
+    <!-- font awesome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css"
+        integrity="sha512-DxV+EoADOkOygM4IR9yXP8Sb2qwgidEmeqAEmDKIOfPRQZOWbXCzLC6vjbZyy0vPisbH2SyW27+ddLVCN+OMzQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
-    <header></header>
+    <header>
+        <!-- nav bar start -->
+        <nav class="container">
+            <div class="nav-bar">
+                <div class="nav-logo">
+                    <img src="./assets/logo.png" alt="">
+                </div>
+                <div class="nav-item">
+                    <ul>
+                        <li><a class="home" href="">Home</a></li>
+                        <li><a href="">Shop</a></li>
+                        <li><a href="">About Us</a></li>
+                    </ul>
+                </div>
+                <div class="nav-cart">
+                    <img src="./assets/shopping-cart.svg" alt="">
+                    <p class="nav-cart-text">Cart ($56)</p>
+                </div>
+            </div>
+        </nav>
+        <!-- nav bar end -->
+    </header>
     <main></main>
     <footer></footer>
 </body>
