added banner section with responsive

--- a/index.html
+++ b/index.html
@@ -20,20 +20,39 @@
                 <div class="nav-logo">
                     <img src="./assets/logo.png" alt="">
                 </div>
-                <div class="nav-item">
-                    <ul>
-                        <li><a class="home" href="">Home</a></li>
-                        <li><a href="">Shop</a></li>
-                        <li><a href="">About Us</a></li>
-                    </ul>
-                </div>
-                <div class="nav-cart">
-                    <img src="./assets/shopping-cart.svg" alt="">
-                    <p class="nav-cart-text">Cart ($56)</p>
+                <div style="display: flex; gap: 48px;">
+                    <div class="nav-item">
+                        <ul>
+                            <li><a class="home" href="">Home</a></li>
+                            <li><a href="">Shop</a></li>
+                            <li><a href="">About Us</a></li>
+                        </ul>
+                    </div>
+                    <div class="nav-cart">
+                        <img src="./assets/shopping-cart.svg" alt="">
+                        <p class="nav-cart-text">Cart ($56)</p>
+                    </div>
                 </div>
             </div>
         </nav>
         <!-- nav bar end -->
+
+        <!-- banner section start -->
+        <section class="container">
+            <div class="banner">
+                <div class="banner-content">
+                    <h1 class="banner-title">ALWAYS <span class="extra-color">FRESH</span> <br><span
+                            class="extra-color">FLOWERS</span></h1>
+                    <p class="banner-desription">Indulge your senses with the beauty and fragrance of our fresh flower
+                        shop. From classic roses to
+                        exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
+                </div>
+                <div class="banner-img">
+                    <img class="image" src="./assets/hero-flower.png" alt="">
+                </div>
+            </div>
+        </section>
+        <!-- banner section end -->
     </header>
     <main></main>
     <footer></footer>
