added plants and flower section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <header>
+    <header hidden>
         <!-- nav bar start -->
         <nav class="container">
             <div class="nav-bar">
@@ -54,7 +54,62 @@
         </section>
         <!-- banner section end -->
     </header>
-    <main></main>
+    <main>
+        <!-- our plants section start -->
+        <section hidden class="container">
+            <div class="plants-content">
+                <h2 class="plants-content-title"><span class="extra-color">Our</span> Plants</h2>
+                <p class="plants-description">Indulge your senses with the beauty and fragrance of our fresh flower
+                    shop. From classic roses to
+                    exotic blooms, we offer a wide variety of fresh.</p>
+            </div>
+            <div class="plants-images">
+                <div class="plants-one">
+                    <img class="images" src="./assets/sample-flower-image.png" alt="">
+                    <p class="plants-title">Lily Blossom</p>
+                    <h5 class="plants-price">20 USD</h5>
+                    <div class="btn">
+                        <button>ADD TO CART</button>
+                    </div>
+                </div>
+                <div class="plants-one">
+                    <img class="images" src="./assets/sample-flower-image.png" alt="">
+                    <p class="plants-title">Lily Blossom</p>
+                    <h5 class="plants-price">20 USD</h5>
+                    <div class="btn">
+                        <button>ADD TO CART</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- our plants section end -->
+
+        <!-- flower and plants section start -->
+        <section class="container">
+            <div class="flower">
+                <div class="flower-image">
+                    <img src="./assets/flower-store.png" alt="">
+                    <img class="trusted" src="./assets/trusted-badge.png" alt="">
+                </div>
+                <div class="flower-text">
+                    <h2 class="flower-text-title">Flower & Plants Lover</h2>
+                    <ul class="flower-text-ul">
+                        <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic
+                            roses to exotic blooms, we offer a wide variety of fresh.</li>
+                    </ul>
+                    <ul class="flower-text-ul">
+                        <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic
+                            roses to exotic blooms, we offer a wide variety of fresh.</li>
+                    </ul>
+                    <ul class="flower-text-ul">
+                        <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic
+                            roses to exotic blooms, we offer a wide variety of fresh.</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+        <!-- flowr and plants section end -->
+    </main>
     <footer></footer>
 </body>
 
