--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <!-- our plants section end -->
 
         <!-- flower and plants section start -->
-        <section class="container">
+        <section hidden class="container">
             <div class="flower">
                 <div class="flower-image">
                     <img src="./assets/flower-store.png" alt="">
@@ -109,6 +109,18 @@
             </div>
         </section>
         <!-- flowr and plants section end -->
+
+        <!-- bunch section start -->
+        <section class="container">
+            <div class="bunch-text">
+                <h2 class="bunch-text-title">Join the colorful Bunch</h2>
+                <div class="bunch-input">
+                    <input type="text" placeholder="Write email">
+                    <button>Subscribe</button>
+                </div>
+            </div>
+        </section>
+        <!-- bunch sectin end -->
     </main>
     <footer></footer>
 </body>
