added footer section

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
                 <div class="banner-content">
                     <h1 class="banner-title">ALWAYS <span class="extra-color">FRESH</span> <br><span
                             class="extra-color">FLOWERS</span></h1>
-                    <p class="banner-desription">Indulge your senses with the beauty and fragrance of our fresh flower
-                        shop. From classic roses to
-                        exotic blooms, we offer a wide variety of fresh flowers that are perfect for any occasion. </p>
+                    <p class="banner-desription">At our store, freshness isn’t just a word — it’s a commitment. From
+                        handpicked plants and organic produce to the latest collections, we ensure everything you see is
+                        vibrant, clean, and full of life. We believe in delivering quality that looks good,</p>
                 </div>
                 <div class="banner-img">
                     <img class="image" src="./assets/hero-flower.png" alt="">
@@ -57,27 +57,77 @@
     <main>
         <!-- our plants section start -->
         <section hidden class="container">
-            <div class="plants-content">
-                <h2 class="plants-content-title"><span class="extra-color">Our</span> Plants</h2>
-                <p class="plants-description">Indulge your senses with the beauty and fragrance of our fresh flower
-                    shop. From classic roses to
-                    exotic blooms, we offer a wide variety of fresh.</p>
-            </div>
-            <div class="plants-images">
-                <div class="plants-one">
-                    <img class="images" src="./assets/sample-flower-image.png" alt="">
-                    <p class="plants-title">Lily Blossom</p>
-                    <h5 class="plants-price">20 USD</h5>
-                    <div class="btn">
-                        <button>ADD TO CART</button>
-                    </div>
+            <div class="plant">
+                <div class="plants-content">
+                    <h2 class="plants-content-title"><span class="extra-color">Our</span> Plants</h2>
+                    <p class="plants-description">Indulge your senses with the beauty and fragrance of our fresh flower
+                        shop. From classic roses to
+                        exotic blooms, we offer a wide variety of fresh.</p>
                 </div>
-                <div class="plants-one">
-                    <img class="images" src="./assets/sample-flower-image.png" alt="">
-                    <p class="plants-title">Lily Blossom</p>
-                    <h5 class="plants-price">20 USD</h5>
-                    <div class="btn">
-                        <button>ADD TO CART</button>
+                <div class="plants-images">
+                    <div class="plants-one">
+                        <img class="images" src="./assets/sample-flower-image.png" alt="">
+                        <p class="plants-title">Lily Blossom</p>
+                        <h5 class="plants-price">20 USD</h5>
+                        <div class="btn">
+                            <button>ADD TO CART</button>
+                        </div>
+                    </div>
+                    <div class="plants-one">
+                        <img class="images" src="./assets/sample-flower-image.png" alt="">
+                        <p class="plants-title">Lily Blossom</p>
+                        <h5 class="plants-price">20 USD</h5>
+                        <div class="btn">
+                            <button>ADD TO CART</button>
+                        </div>
+                    </div>
+                    <div class="plants-one">
+                        <img class="images" src="./assets/sample-flower-image.png" alt="">
+                        <p class="plants-title">Lily Blossom</p>
+                        <h5 class="plants-price">20 USD</h5>
+                        <div class="btn">
+                            <button>ADD TO CART</button>
+                        </div>
+                    </div>
+                    <div class="plants-one">
+                        <img class="images" src="./assets/sample-flower-image.png" alt="">
+                        <p class="plants-title">Lily Blossom</p>
+                        <h5 class="plants-price">20 USD</h5>
+                        <div class="btn">
+                            <button>ADD TO CART</button>
+                        </div>
+                    </div>
+                    <div class="plants-one">
+                        <img class="images" src="./assets/sample-flower-image.png" alt="">
+                        <p class="plants-title">Lily Blossom</p>
+                        <h5 class="plants-price">20 USD</h5>
+                        <div class="btn">
+                            <button>ADD TO CART</button>
+                        </div>
+                    </div>
+                    <div class="plants-one">
+                        <img class="images" src="./assets/sample-flower-image.png" alt="">
+                        <p class="plants-title">Lily Blossom</p>
+                        <h5 class="plants-price">20 USD</h5>
+                        <div class="btn">
+                            <button>ADD TO CART</button>
+                        </div>
+                    </div>
+                    <div class="plants-one">
+                        <img class="images" src="./assets/sample-flower-image.png" alt="">
+                        <p class="plants-title">Lily Blossom</p>
+                        <h5 class="plants-price">20 USD</h5>
+                        <div class="btn">
+                            <button>ADD TO CART</button>
+                        </div>
+                    </div>
+                    <div class="plants-one">
+                        <img class="images" src="./assets/sample-flower-image.png" alt="">
+                        <p class="plants-title">Lily Blossom</p>
+                        <h5 class="plants-price">20 USD</h5>
+                        <div class="btn">
+                            <button>ADD TO CART</button>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -94,24 +144,61 @@
                 <div class="flower-text">
                     <h2 class="flower-text-title">Flower & Plants Lover</h2>
                     <ul class="flower-text-ul">
-                        <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic
-                            roses to exotic blooms, we offer a wide variety of fresh.</li>
+                        <li>For every flower and plant lover, freshness is more than just beauty—it's life itself.
+                            That’s why we carefully select and nurture every bloom</li>
                     </ul>
                     <ul class="flower-text-ul">
-                        <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic
-                            roses to exotic blooms, we offer a wide variety of fresh.</li>
+                        <li>Green leaves, fresh petals, and a touch of nature can transform any room. Our collection of
+                            flowers and plants is handpicked with love, grown responsibly, and delivered fresh to your
+                            door. </li>
                     </ul>
                     <ul class="flower-text-ul">
-                        <li>Indulge your senses with the beauty and fragrance of our fresh flower shop. From classic
-                            roses to exotic blooms, we offer a wide variety of fresh.</li>
+                        <li>We understand the joy that comes from watching your favorite plant thrive. That’s why our
+                            mission is to provide only the freshest, healthiest greens. Whether you're gifting a bouquet
+                            or building your indoor
+                        </li>
                     </ul>
                 </div>
             </div>
         </section>
         <!-- flowr and plants section end -->
 
-        <!-- bunch section start -->
+        <!-- latest section start -->
         <section class="container">
+            <div class="plants-content">
+                <h2 class="plants-content-title"><span class="extra-color">Latest </span>Deals</h2>
+                <p class="plants-description">Brighten your space for less with our freshest flower and plant offers.
+                    From vibrant bouquets to lush indoor greens, enjoy limited-time deals on handpicked beauties—always
+                    fresh, always affordable. </p>
+            </div>
+            <div class="latest-images">
+                <div class="img-1">
+                    <img src="./assets/deal-bloom.png" alt="">
+                    <div class="img-text">
+                        <p class="p">60% Off | Bloom Plant</p>
+                        <a href="">Shop Now</a>
+                    </div>
+                </div>
+                <div class="img-2">
+                    <img src="./assets/deal-zabo.png" alt="">
+                    <div class="img-text">
+                        <p class="p">60% Off | Bloom Plant</p>
+                        <a href="">Shop Now</a>
+                    </div>
+                </div>
+                <div class="img-3">
+                    <img src="./assets/deal-ana.png" alt="">
+                    <div class="img-text">
+                        <p class="p">60% Off | Bloom Plant</p>
+                        <a href="">Shop Now</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- latest section end -->
+
+        <!-- bunch section start -->
+        <section hidden>
             <div class="bunch-text">
                 <h2 class="bunch-text-title">Join the colorful Bunch</h2>
                 <div class="bunch-input">
@@ -122,7 +209,41 @@
         </section>
         <!-- bunch sectin end -->
     </main>
-    <footer></footer>
+    <footer hidden class="container">
+        <!-- footer section start -->
+        <div class="footer-content">
+            <div class="footer-first-text">
+                <img src="./assets/logo.png" alt="">
+                <p>Each petal tells a story, bringing joy, color, and calm to every moment. Brighten your day with the
+                    simple charm of fresh blooms.</p>
+            </div>
+            <div class="footer-second-text">
+                <ul>
+                    <li><a href="">Home</a></li>
+                    <li><a href="">About Us</a></li>
+                    <li><a href="">Blog</a></li>
+                    <li><a href="">FAQ</a></li>
+                    <li><a href="">Contact Us</a></li>
+                </ul>
+            </div>
+            <div class="footer-third-text">
+                <ul>
+                    <li><a href="">Features</a></li>
+                    <li><a href="">Pricing</a></li>
+                    <li><a href="">Privacy Policy</a></li>
+                    <li><a href="">Terms of Service</a></li>
+                    <li><a href="">Help Center</a></li>
+                </ul>
+            </div>
+            <div class="footer-fifth-text">
+                <img src="./assets/icon-linkedin.png" alt="">
+                <img src="./assets/icon-twitter.png" alt="">
+                <img src="./assets/icon-facebook.png" alt="">
+                <img src="./assets/icon-youtube.png" alt="">
+            </div>
+        </div>
+        <!-- footer section end -->
+    </footer>
 </body>
 
 </html>
