added footer section

--- a/index.html
+++ b/index.html
@@ -172,21 +172,21 @@
                     fresh, always affordable. </p>
             </div>
             <div class="latest-images">
-                <div class="img-1">
+                <div class="img-1 image-box">
                     <img src="./assets/deal-bloom.png" alt="">
                     <div class="img-text">
                         <p class="p">60% Off | Bloom Plant</p>
                         <a href="">Shop Now</a>
                     </div>
                 </div>
-                <div class="img-2">
+                <div class="img-2 image-box">
                     <img src="./assets/deal-zabo.png" alt="">
                     <div class="img-text">
-                        <p class="p">60% Off | Bloom Plant</p>
+                        <p class="par">60% Off | Bloom Plant</p>
                         <a href="">Shop Now</a>
                     </div>
                 </div>
-                <div class="img-3">
+                <div class="img-3 image-box">
                     <img src="./assets/deal-ana.png" alt="">
                     <div class="img-text">
                         <p class="p">60% Off | Bloom Plant</p>
