added latest section

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <header hidden>
+    <header>
         <!-- nav bar start -->
         <nav class="container">
             <div class="nav-bar">
@@ -56,7 +56,7 @@
     </header>
     <main>
         <!-- our plants section start -->
-        <section hidden class="container">
+        <section class="container">
             <div class="plant">
                 <div class="plants-content">
                     <h2 class="plants-content-title"><span class="extra-color">Our</span> Plants</h2>
@@ -135,7 +135,7 @@
         <!-- our plants section end -->
 
         <!-- flower and plants section start -->
-        <section hidden class="container">
+        <section class="container">
             <div class="flower">
                 <div class="flower-image">
                     <img src="./assets/flower-store.png" alt="">
@@ -198,7 +198,7 @@
         <!-- latest section end -->
 
         <!-- bunch section start -->
-        <section hidden>
+        <section>
             <div class="bunch-text">
                 <h2 class="bunch-text-title">Join the colorful Bunch</h2>
                 <div class="bunch-input">
@@ -209,7 +209,7 @@
         </section>
         <!-- bunch sectin end -->
     </main>
-    <footer hidden class="container">
+    <footer class="container">
         <!-- footer section start -->
         <div class="footer-content">
             <div class="footer-first-text">
