--- a/index.html
+++ b/index.html
@@ -175,21 +175,21 @@
                 <div class="img-1 image-box">
                     <img src="./assets/deal-bloom.png" alt="">
                     <div class="img-text">
-                        <p class="p">60% Off | Bloom Plant</p>
+                        <h4 class="p">60% Off | Bloom Plant</h4>
                         <a href="">Shop Now</a>
                     </div>
                 </div>
                 <div class="img-2 image-box">
                     <img src="./assets/deal-zabo.png" alt="">
                     <div class="img-text">
-                        <p class="par">60% Off | Bloom Plant</p>
+                        <h4 class="par">25% Off | Zabo Plant</h4>
                         <a href="">Shop Now</a>
                     </div>
                 </div>
                 <div class="img-3 image-box">
                     <img src="./assets/deal-ana.png" alt="">
                     <div class="img-text">
-                        <p class="p">60% Off | Bloom Plant</p>
+                        <h4 class="p">30% Off | Ana Plant</h4>
                         <a href="">Shop Now</a>
                     </div>
                 </div>
